--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -1,14 +1,19 @@
 name: Dev CI/CD
 
 on:
+  push:
+    branches:
+      - develop
   pull_request:
-    types: [closed]
-  workflow_dispatch: # (2).수동 실행도 가능하도록
+    types: [ closed ]
+    branches:
+      - develop
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest # (3).OS환경
-    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'
+    if: (github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop') || github.event_name == 'push'
 
     steps:
       - name: Checkout
